# instagram-influencer

./: .env.example.txt  .gitignore  docker-compose-dev.yml  docker-compose-prod.yml  pyproject.toml  readme.md  requirements.txt
.github/workflows/: build-deploy.yaml  build-deploy.yml
app/: main.py
app/api/: api.py
app/api/routers/: auth.py  profile.py  search.py
app/api/schema/: profile.py  user.py
app/api/tests/: conftest.py  test_auth.py  test_profile.py  test_search.py
app/cors/: config.py  database.py  security.py
app/db/models/: users.py
