[tool.poetry]
name = "instagram-influence-africa"
version = "0.1.0"
description = "Instagram infuencer search portal: Influence Africa task"
authors = ["Nkasi-e <nkasijnr@gmail.com>"]
readme = "README.md"
packages = [{include = "instagram_influencer_search_portal"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.92.0"}
sqlalchemy = "^2.0.3"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
coveralls = "^3.3.1"
psycopg2-binary = "^2.9.5"
psycopg2 = "^2.9.5"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
